--- a/Proyecto Gimnasio/Proyecto Gimnasio/wwwroot/css/site.css
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/wwwroot/css/site.css
@@ -20,3 +20,45 @@ html {
 body {
   margin-bottom: 60px;
 }
+/* --- ESTILOS DE LA BARRA DE NAVEGACIÓN (NAVBAR) --- */
+
+/* 1. Fondo de la barra */
+.navbar {
+    background-color: #050505 !important; /* Negro intenso */
+    border-bottom: 2px solid #00509D !important; /* Línea azul abajo */
+}
+
+/* 2. El Logo (Proyecto_Gimnasio o IRONGYM) */
+.navbar-brand {
+    font-weight: 800; /* Letra gorda */
+    font-size: 1.4rem;
+    color: #ffffff !important;
+    text-transform: uppercase;
+}
+
+/* 3. Los Enlaces (Links) */
+.navbar-nav .nav-link {
+    color: #e0e0e0 !important; /* Blanco hueso */
+    font-weight: 600;
+    margin: 0 8px; /* Separación entre palabras */
+    transition: 0.3s; /* Efecto suave */
+}
+
+    /* 4. Cuando pasas el mouse por encima */
+    .navbar-nav .nav-link:hover {
+        color: #FFD500 !important; /* Amarillo Neón */
+        text-shadow: 0 0 10px rgba(255, 213, 0, 0.5); /* Brillo */
+    }
+
+/* 5. El botón Logout (para que destaque) */
+.logout-link {
+    color: #ff4d4d !important; /* Rojo */
+    border: 1px solid #ff4d4d;
+    padding: 5px 15px;
+    border-radius: 20px;
+}
+
+    .logout-link:hover {
+        background-color: #ff4d4d;
+        color: white !important;
+    }
