--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Acceso/LandingPage.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Acceso/LandingPage.cshtml
@@ -16,13 +16,10 @@
 
     <nav class="navbar">
         <div class="logo">IRON<span class="text-amarillo">GYM</span></div>
-        <div class="nav-links">
-            <a href="#">Home</a>
-            <a href="#">Classes</a>
-            <a href="#">Products</a>
-        </div>
         <a class="nav-link text-dark" asp-area="" asp-controller="Acceso" asp-action="Login">Login</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="UserRegister" asp-action="Create">Sing Out</a>
     </nav>
+
 
     <section class="hero">
         <h1>PUSH YOUR <span class="text-azul">LIMITS</span></h1>
