--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Home/Index.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@
             <a class="home-btn home-btn-saleplans" asp-controller="SalePlan" asp-action="Index">Sale Plans</a>
             <a class="home-btn home-btn-users" asp-controller="Users" asp-action="Index">Users</a>
             <a class="home-btn home-btn-saleproducts" asp-controller="SaleProduct" asp-action="Index">Sale Product</a>
+            <a class="home-btn home-btn-saleproducts" asp-controller="Reportes" asp-action="Index">Reportes</a>
         }
     </div>
 </div>
