--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/UserRegister/Create.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/UserRegister/Create.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Register";
 }
 
-
-
 <link rel="stylesheet" href="~/css/UserRegister.css" />
 
 <h1>User Registration</h1>
@@ -36,6 +34,7 @@
             <div class="form-group mb-3">
                 <label asp-for="Person.DateBirthay" class="control-label">Date of Birth</label>
                 <input asp-for="Person.DateBirthay" type="date" class="form-control" />
+
                 <span asp-validation-for="Person.DateBirthay" class="text-danger"></span>
             </div>
 
@@ -60,20 +59,23 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
+
             <div class="form-group mb-3">
                 <label asp-for="Password" class="control-label">Password</label>
-                <input name="Password" id="Password" class="form-control" type="password" required />
+                <input asp-for="Password" class="form-control" type="password" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group mt-4">
                 <input type="submit" value="Register" class="btn btn-primary w-100" />
             </div>
         </form>
     </div>
 </div>
 
-
+<div class="mt-3">
+    <a asp-controller="Acceso" asp-action="Login">Back to Login</a>
+</div>
 
 @section Scripts {
     @{
