--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Products/Index.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Products/Index.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Productos</h1>
+<h1>Products</h1>
 <link rel="stylesheet" href="~/css/Producto.css" />
 <p>
     @if (User.IsInRole("Admin"))
     {
-        <a asp-action="Create" class="btn btn-primary">Crear Nuevo</a>
+        <a asp-action="Create" class="btn btn-primary">Create New</a>
     }
 </p>
 
@@ -50,17 +50,17 @@
                 <td>
                     @if (User.IsInRole("Admin"))
                     {
-                        <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@item.IdProduct">Editar</a>
+                        <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@item.IdProduct">Edit</a>
                     }
 
                     @if (User.IsInRole("Admin") || User.IsInRole("Employee"))
                     {
-                        <a class="btn btn-info btn-sm" asp-action="Details" asp-route-id="@item.IdProduct">Detalles</a>
+                        <a class="btn btn-info btn-sm" asp-action="Details" asp-route-id="@item.IdProduct">Details</a>
                     }
 
                     @if (User.IsInRole("Admin"))
                     {
-                        <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.IdProduct">Eliminar</a>
+                        <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.IdProduct">Delete</a>
                     }
                 </td>
             </tr>
