--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Plans/Index.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Plans/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 <link rel="stylesheet" href="~/css/plans.css" />
-<h1>Index</h1>
+<h1>Plans</h1>
 
 <p>
     @if (User.IsInRole("Admin"))
