--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Reportes/ReporteVentasPlanes.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Reportes/ReporteVentasPlanes.cshtml
@@ -7,7 +7,7 @@
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2>
-            <i class="fas fa-clipboard-list text-success"></i> Reporte de Ventas de Planes
+            <i class="fas fa-clipboard-list text-success"></i> Plan Sales Report
         </h2>
         <a asp-action="Index" class="btn btn-secondary">
             <i class="fas fa-arrow-left"></i> Volver
