--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Categories/Index.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Categories/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 <link rel="stylesheet" href="~/css/category.css" />
-<h1>Index</h1>
+<h1>Categories</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
