--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Reportes/ReporteVentasProductos.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Reportes/ReporteVentasProductos.cshtml
@@ -68,8 +68,8 @@
                     <table class="table table-striped table-hover">
                         <thead class="table-dark">
                             <tr>
-                                <th>Año</th>
-                                <th>Mes</th>
+                                <th>Year</th>
+                                <th>Month</th>
                                 <th class="text-end">Total Ventas</th>
                                 <th class="text-end">Cantidad</th>
                                 <th class="text-end">Promedio</th>
@@ -103,7 +103,7 @@
     else
     {
         <div class="alert alert-info">
-            <i class="fas fa-info-circle"></i> No hay datos disponibles para mostrar.
+            <i class="fas fa-info-circle"></i> No data is available to display.
         </div>
     }
 </div>
