--- a/Proyecto Gimnasio/Proyecto Gimnasio/wwwroot/css/site.css
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/wwwroot/css/site.css
@@ -24,13 +24,13 @@ body {
 
 /* 1. Fondo de la barra */
 .navbar {
-    background-color: #050505 !important; /* Negro intenso */
-    border-bottom: 2px solid #00509D !important; /* Línea azul abajo */
+    background-color: #050505 !important; 
+    border-bottom: 2px solid #00509D !important; 
 }
 
 /* 2. El Logo (Proyecto_Gimnasio o IRONGYM) */
 .navbar-brand {
-    font-weight: 800; /* Letra gorda */
+    font-weight: 800; 
     font-size: 1.4rem;
     color: #ffffff !important;
     text-transform: uppercase;
@@ -38,21 +38,21 @@ body {
 
 /* 3. Los Enlaces (Links) */
 .navbar-nav .nav-link {
-    color: #e0e0e0 !important; /* Blanco hueso */
+    color: #e0e0e0 !important; 
     font-weight: 600;
-    margin: 0 8px; /* Separación entre palabras */
-    transition: 0.3s; /* Efecto suave */
+    margin: 0 8px; 
+    transition: 0.3s; 
 }
 
     /* 4. Cuando pasas el mouse por encima */
     .navbar-nav .nav-link:hover {
-        color: #FFD500 !important; /* Amarillo Neón */
-        text-shadow: 0 0 10px rgba(255, 213, 0, 0.5); /* Brillo */
+        color: #FFD500 !important; 
+        text-shadow: 0 0 10px rgba(255, 213, 0, 0.5); 
     }
 
 /* 5. El botón Logout (para que destaque) */
 .logout-link {
-    color: #ff4d4d !important; /* Rojo */
+    color: #ff4d4d !important; 
     border: 1px solid #ff4d4d;
     padding: 5px 15px;
     border-radius: 20px;
